--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include layouts/header.ejs %>
     
-        <h2>It's a Node and Cassandra CRUD demo application.</h2>
+        <h2>Aplicação feita com Node e Cassandra</h2>
         <p>
-        First &nbsp;<a class="a-inside init" href="/cassandrainfo">Click to initialize Cassandra</a>&nbsp; database!
+        Primeiro &nbsp;<a class="a-inside init" href="/cassandrainfo">Iniciar cassandra!</a>&nbsp;
         </p>
         
 <%- include layouts/footer.ejs %>
